patterns/blue-green/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: highway-bluegreen
  namespace: blue-green
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: highway-bluegreen-service
            port:
              number: 3000
        path: /
        pathType: Prefix
